# sw4rm-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust_pr_checks.yml  rust_publish.yml
cargo-openapi-generator/: Cargo.toml
cargo-openapi-generator/src/: main.rs
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs  reference.rs  spec.rs
core/src/openapi_v2/: items.rs
core/src/openapi_v3_0/: components.rs  encoding.rs  example.rs  link.rs  media_type.rs  oauth_flow.rs  request_body.rs  server.rs
core/src/shared/: mod.rs  operation.rs  parameter.rs  path_item.rs  response.rs  schema.rs  security_scheme.rs  string_or.rs  tag.rs  xml.rs
core/tests/: test_deserializing.rs  test_resolution.rs
generator/: Cargo.toml
generator/src/: attribute.rs  error.rs  field.rs  file.rs  ident.rs  identifier.rs  item.rs  lib.rs  model.rs  representable.rs  typed.rs  utils.rs
generator/src/parsing/: attribute.rs  field.rs  file.rs  identifier.rs  import.rs  mod.rs  model.rs  representable.rs
generator/tests/: test_reading.rs
resolve-core/: Cargo.toml
resolve-core/src/: error.rs  lib.rs  ref_types.rs  reference.rs  traits.rs
resolve-macro/: Cargo.toml
resolve-macro/src/: lib.rs
resources/: openapi_3_0.yaml  swagger-dev-spec.json  swagger_2_0.yaml
resources/bungie/: ApplicationsApiUsage.rs  ApplicationsApplication.rs  ApplicationsApplicationDeveloper.rs  ApplicationsDatapoint.rs  ApplicationsSeries.rs  CommonModelsCoreSetting.rs  CommonModelsCoreSettingsConfiguration.rs  CommonModelsCoreSystem.rs  CommonModelsDestinytwoCoreSettings.rs  ComponentsComponentResponse.rs  ConfigClanBannerClanBannerDecal.rs  ConfigClanBannerClanBannerSource.rs  ConfigGroupTheme.rs  ConfigUserTheme.rs  ContentCommentSummary.rs  ContentContentItemPublicContract.rs  ContentContentRepresentation.rs  ContentModelsContentPreview.rs  ContentModelsContentTypeDefaultValue.rs  ContentModelsContentTypeDescription.rs  ContentModelsContentTypeProperty.rs  ContentModelsContentTypePropertySection.rs  ContentModelsTagMetadataDefinition.rs  ContentModelsTagMetadataItem.rs  ContentNewsArticleRssItem.rs  ContentNewsArticleRssResponse.rs  DatesDateRange.rs  DestinyActivitiesDestinyPublicActivityStatus.rs  DestinyAdvancedAwaAuthorizationResult.rs  DestinyAdvancedAwaInitializeResponse.rs  DestinyAdvancedAwaPermissionRequested.rs  DestinyAdvancedAwaUserResponse.rs  DestinyArtifactsDestinyArtifactCharacterScoped.rs  DestinyArtifactsDestinyArtifactProfileScoped.rs  DestinyArtifactsDestinyArtifactTier.rs  DestinyArtifactsDestinyArtifactTierItem.rs  DestinyBaseItemComponentSetOfintsixtyfour.rs  DestinyBaseItemComponentSetOfintthirtytwo.rs  DestinyBaseItemComponentSetOfuintthirtytwo.rs  DestinyChallengesDestinyChallengeStatus.rs  (+574 more)
resources/discord/: AccountResponse.rs  ActionRow.rs  ApplicationCommandAttachmentOption.rs  ApplicationCommandAttachmentOptionResponse.rs  ApplicationCommandAutocompleteCallbackRequest.rs  ApplicationCommandBooleanOption.rs  ApplicationCommandBooleanOptionResponse.rs  ApplicationCommandChannelOption.rs  ApplicationCommandChannelOptionResponse.rs  ApplicationCommandCreateRequest.rs  ApplicationCommandIntegerOption.rs  ApplicationCommandIntegerOptionResponse.rs  ApplicationCommandMentionableOption.rs  ApplicationCommandMentionableOptionResponse.rs  ApplicationCommandNumberOption.rs  ApplicationCommandNumberOptionResponse.rs  ApplicationCommandOptionIntegerChoice.rs  ApplicationCommandOptionIntegerChoiceResponse.rs  ApplicationCommandOptionNumberChoice.rs  ApplicationCommandOptionNumberChoiceResponse.rs  ApplicationCommandOptionStringChoice.rs  ApplicationCommandOptionStringChoiceResponse.rs  ApplicationCommandPatchRequestPartial.rs  ApplicationCommandPermission.rs  ApplicationCommandResponse.rs  ApplicationCommandRoleOption.rs  ApplicationCommandRoleOptionResponse.rs  ApplicationCommandStringOption.rs  ApplicationCommandStringOptionResponse.rs  ApplicationCommandSubcommandGroupOption.rs  (+277 more)
src/: lib.rs
(+162 files in other folders)
