[package]
name = "sw4rm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
lazy_static = "1.4.0"
regex = "1.10.3"
semver = { version = "1.0.22", features = ["serde"] }