[workspace]
resolver = "2"
members = [
    "core",
    "generator",
    "cargo-openapi-generator",
]

[workspace.package]
authors = ["MatrixSenpai <math.matrix@icloud.com>"]
homepage = "https://github.com/MatrixSenpai/sw4rm-rs"
repository = "https://github.com/MatrixSenpai/sw4rm-rs"
categories = ["api-bindings", "compilers", "development-tools::build-utils", "parser-implementations", "template-engine"]
license-file = "LICENSE.md"
edition = "2021"
rust-version = "1.70"

[profile.release]
panic = "abort"
opt-level = "s"