[package]
name = "resolve-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"
darling = "0.20.5"

resolve-core = { version = "=0.1.0", path = "../resolve-core" }

[lib]
proc-macro = true